[package]
name = "player-skeleton-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }  # For Sending network calls in parallel
reqwest = { version = "0.11.22", features = ["json"] }
rayon = "1.8.0" # For parallelism
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
amqprs = "1.5.1"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
wiremock = "0.5.22"
matches = "0.1"
async-trait = "0.1.74"
[features]
traces = []
[dependencies.uuid]
version = "1.6.1"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]