[package]
name = "player-skeleton-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
async-channel = "2.1.1"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
amqprs = "1.5.1" # RabbitMQ
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3"
lazy_static = "1.4.0"
async-trait = "0.1.74"
[dev-dependencies]
wiremock = "0.5.22"
mockall = "0.12.0"
